manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-log-output
          emptyDir:
            {}
      containers:
      - name: log-output-writer
        image: pasiol/log-output-writer@sha256:201ecfd14c104ddb4a95746bbc59cfc989cfec2c17abd28c510c9213599bb3c7
        volumeMounts:
          - mountPath: /output
            name: shared-log-ouput
      - name: log-output-reader
        image: pasiol/log-output-reader@sha256:775301befdce34e97deb741681ed377eba3aa163048cf600cd52b0d65cb61d16
        volumeMounts:
          - mountPath: /input
            name: shared-log-output
